autonomous update skills